# xiaohongshu-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  agent.py  auth.py  backends.py  cli.py  config_center.py  content_rubric.py  deepagents_harness.json  docker-compose.yml  install_remote_lark.py  langgraph.json  lark_mcp_server.py  middlewares.py  model_health.py  model_registry.py  models.py  prompts.py  pyproject.toml  rubric_model.py  subagents.py  subagents_executor.py  verify_1b1.py  verify_1b3.py  verify_memory.py  verify_remote_lark.py  verify_remote_logs.py
.claude/: settings.json
data_foundation/: __init__.py  agent_trace.py  config.py  creation_memory.py  db.py  embedding_repository.py  embedding_service.py  engine_config.py  errors.py  evidence.py  falkor_client.py  feishu_metrics.py  feishu_source_loader.py  feishu_sync.py  generation_provenance.py  graph.py  http_app.py  index_drift.py  internal_api.py  knowledge_grounding.py  knowledge_quality_gate.py  local_cards.py  meili_client.py  metric_parse.py  models.py  online_notes.py  operations.py  outbox_repository.py  outbox_requests.py  outbox_worker.py  performance_feedback.py  performance_scoring.py  permissions.py  preference_learning.py  preference_outbox.py  processor_state.py  qdrant_gate.py  repository.py  reranker_shadow.py  retrieval.py  (+23 more)
deploy/: pip.conf
design_system/: _ds_manifest.json
docs/: knowledge-retrieval-evaluation.md  knowledge-retrieval-online-metrics.md  project_planning.md
scripts/: _snip.py  backfill_feishu_performance.py  backup-db.ps1  backup-db.sh  calibrate_relevance_floor.py  dbskill_audit.py  deploy.py  deploy_health_check.py  detect_engine_drift.py  entrypoint-standby.sh  evaluate_retrieval.py  init-replication.sh  migrate_atoms.py  requeue_engine_index.py  runtime_import_smoke.py  setup-replication.sh  sync_lark_skills.py
tests/: conftest.py  test_agent_assembly.py  test_agent_trace_assembly.py  test_auth.py  (+38 more)
(+591 files in other folders)
