[project]
name = "xhs-content-agent"
version = "0.1.0"
description = "小红书文案智能体 - 基于 deepagents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8,<1.0.0",
    "langchain>=1.3.9,<2.0.0",
    "langchain-anthropic>=1.4.6,<2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
