[project]
name = "xhs-content-agent"
version = "0.1.0"
description = "小红书文案智能体 - 基于 deepagents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8,<1.0.0",
    "langchain>=1.3.9,<2.0.0",
    "langchain-anthropic>=1.4.6,<2.0.0",
    "langgraph-cli[inmem]>=0.2.0,<1.0.0",
    "langgraph-sdk>=0.1.0,<1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "rich>=15.0.0",
    "cryptography>=42.0.0,<43.0.0",
    "langchain-openai>=1.3.2",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "starlette>=0.46.0,<2.0.0",
    "meilisearch>=0.31,<1.0",
    "falkordb>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "paramiko>=5.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[tool.setuptools.packages.find]
include = ["tools", "shared", "data_foundation"]

[tool.setuptools.package-data]
data_foundation = ["schema.sql"]

[tool.setuptools]
py-modules = ["agent", "auth", "backends", "middlewares", "prompts", "subagents", "verify_1b1", "verify_1b3", "verify_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
